# ed-daemon

./: Cargo.toml  Rocket.toml  create_certs.sh  readme.md  test_config.json
examples/alpine/: Dockerfile
examples/alpine/website/: index.html
package/etc/edd/: config.default.json
src/: api.rs  config_file.rs  docker_client.rs  docker_structs.rs  main.rs  manager.rs
