[package]
name = "ed-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
hyper = "0.14"
hyperlocal = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
log = "0.4.19"
tokio-util = "0.7.8"
