[package]
name = "ed-daemon"
version = "1.0.0-rc.3"
edition = "2021"
authors = ["Martyn Pittuck-Schols <martyn@rustfoo.com>"]
license = "MIT"
description = """
Simple docker based container deployment
"""
homepage = "https://github.com/martynp/ed-daemon"
documentation = "https://github.com/martynp/ed-daemon"
repository = "https://github.com/martynp/ed-daemon"
readme = "readme.md"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
hyper = "0.14"
hyperlocal = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
rocket = { version = "0.5.0-rc.3", features = ["json", "tls", "mtls"] }
log = "0.4"
tokio-util = "0.7"
